More fixes for light and dark mode

--- a/app/components/index.module.css
+++ b/app/components/index.module.css
@@ -1,39 +1,3 @@
-.IconButton {
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 2.5rem;
-  height: 2.5rem;
-  padding: 0;
-  margin: 0;
-  outline: 0;
-  border: 1px solid var(--color-gray-200);
-  border-radius: 0.375rem;
-  background-color: var(--color-gray-50);
-  color: var(--color-gray-900);
-  user-select: none;
-
-  @media (hover: hover) {
-    &:hover {
-      background-color: var(--color-gray-100);
-    }
-  }
-
-  &:active {
-    background-color: var(--color-gray-100);
-  }
-
-  &[data-popup-open] {
-    background-color: var(--color-gray-100);
-  }
-
-  &:focus-visible {
-    outline: 2px solid var(--color-blue);
-    outline-offset: -1px;
-  }
-}
-
 .Icon {
   width: 1.25rem;
   height: 1.25rem;
@@ -48,23 +12,23 @@
   transform-origin: var(--transform-origin);
   transition: transform 150ms, opacity 150ms;
 
+  outline: 1px solid var(--color-gray-200);
+  box-shadow: 5px 6px 15px -3px var(--color-gray-300),
+    4px 4px 6px -4px var(--color-gray-300);
+
   &[data-starting-style],
   &[data-ending-style] {
     opacity: 0;
     transform: scale(0.9);
   }
 
-  @media (prefers-color-scheme: light) {
-    outline: 1px solid var(--color-gray-200);
-    box-shadow: 0 10px 15px -3px var(--color-gray-200),
-      0 4px 6px -4px var(--color-gray-200);
-  }
-
-  @media (prefers-color-scheme: dark) {
+  &[data-dark-mode="true"] {
     background-color: var(--color-gray-800);
     color: var(--color-gray-100);
     outline: 1px solid var(--color-gray-700);
     outline-offset: -1px;
+    box-shadow: 5px 6px 15px -3px var(--color-gray-700),
+      4px 4px 6px -4px var(--color-gray-700);
   }
 }
 
